@@ -3,9 +3,11 @@ package com.GeladaoEstacio.Geladao.web.controller;
 
 import com.GeladaoEstacio.Geladao.entities.Usuario;
 import com.GeladaoEstacio.Geladao.service.UsuarioService;
+import com.GeladaoEstacio.Geladao.web.dtos.UsuarioDTO;
 import com.GeladaoEstacio.Geladao.web.returnDtos.ReturnUsuarioDTO;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
+import org.hibernate.query.NativeQuery;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
@@ -33,76 +35,41 @@ public class UsuarioController {
     private ResourceLoader resourceLoader;
 
 
-    @GetMapping("/operacoes_usuarios")
-    public ModelAndView operacoesProdutosPage() {
-        ModelAndView modelAndView = new ModelAndView("operacoes_usuarios/operacoes_usuarios");
-        Resource resource = resourceLoader.getResource("classpath:/templates/operacoes_usuarios/operacoes_usuarios.html");
-        if (!resource.exists()) {
-            modelAndView = new ModelAndView("error/404");
-            modelAndView.setStatus(HttpStatus.NOT_FOUND);
-        }
-        return modelAndView;
-    }
-
     @PostMapping("/criar")
-    public ResponseEntity<ReturnUsuarioDTO> createUser(@Valid @RequestBody Usuario usuario) {
+    public ResponseEntity<ReturnUsuarioDTO> createUser(@Valid @RequestBody UsuarioDTO usuarioDTO) {
+        Usuario usuario = modelMapper.map(usuarioDTO, Usuario.class);
         usuarioService.createUser(usuario);
         ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
         return ResponseEntity.status(HttpStatus.CREATED).body(returnUsuarioDTO);
     }
 
-    @GetMapping("/buscarUser/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> buscarUsuarioId(@PathVariable Long id) {
-        Usuario usuario = usuarioService.buscarUser(id);
-        ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
+    @GetMapping("/{id}")
+    public ResponseEntity<ReturnUsuarioDTO> getUser(@PathVariable Long id) {
+        usuarioService.findById(id);
+        ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuarioService.findById(id), ReturnUsuarioDTO.class);
         return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
-
     }
 
-    @GetMapping("/buscarTodosUsers")
-    public ResponseEntity<List<ReturnUsuarioDTO>> recuperarTodosUsuarios() {
-        List<Usuario> usuarios = usuarioService.buscarUsuarios();
-        List<ReturnUsuarioDTO> returnUsuarioDTOS = usuarios.stream()
-                .sorted(Comparator.comparing(Usuario::getId)) // Ordena pelo nome de usuário
+    @GetMapping("/buscarTodos")
+    public ResponseEntity<List<ReturnUsuarioDTO>> findAll() {
+        List<Usuario> usuarios = usuarioService.findAll();
+        List<ReturnUsuarioDTO> returnUsuariosDTO = usuarios.stream()
                 .map(usuario -> modelMapper.map(usuario, ReturnUsuarioDTO.class))
-                .toList();
-        return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTOS);
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(returnUsuariosDTO);
     }
 
-    @PatchMapping("/alterarUser/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> alterarUsuario(@PathVariable Long id, @RequestBody String nome, @RequestBody  String email){
-        Usuario usuario = usuarioService.atualizarUsuario(id, nome, email);
+    @PatchMapping("/{id}")
+    public ResponseEntity<ReturnUsuarioDTO> deactivateUser(@PathVariable Long id) {
+        Usuario usuario = usuarioService.desativarAcesso(id);
         ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
         return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
     }
 
-    @PatchMapping("/AlterarAcessoADM/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> alterarUsarioToADM(@PathVariable Long id) {
-        Usuario usuario = usuarioService.alterarAcessoUsuarioToADM(id);
-        ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
-        return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
-
-    }
-
-    @PatchMapping("/AlterarAcessoVend/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> alterarUsarioToAVend(@PathVariable Long id) {
-        Usuario usuario = usuarioService.alterarAcessoUsuarioToVEND(id);
+    @PutMapping("/alterarAcesso/{id}")
+    public ResponseEntity<ReturnUsuarioDTO> updateAcess(@PathVariable Long id){
+        Usuario usuario = usuarioService.alteraAcessoAdm(id);
         ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
         return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
     }
-
-    @PatchMapping("/ativarUser/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> ativarUser(@PathVariable Long id) {
-        Usuario usuario = usuarioService.ativarUser(id);
-        ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
-        return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
-    }
-
-    @PatchMapping("/desativarUser/{id}")
-    public ResponseEntity<ReturnUsuarioDTO> desativarUser(@PathVariable Long id) {
-        Usuario usuario = usuarioService.desativarUser(id);
-        ReturnUsuarioDTO returnUsuarioDTO = modelMapper.map(usuario, ReturnUsuarioDTO.class);
-        return ResponseEntity.status(HttpStatus.OK).body(returnUsuarioDTO);
-    }
-
 }
